--- a/vscode_config/settings.json
+++ b/vscode_config/settings.json
@@ -77,6 +77,25 @@
         "__threading_support": "cpp",
         "__tree": "cpp",
         "ios": "cpp",
-        "locale": "cpp"
+        "locale": "cpp",
+        "unordered_set": "cpp",
+        "hash_map": "cpp",
+        "fstream": "cpp",
+        "future": "cpp",
+        "shared_mutex": "cpp",
+        "cfenv": "cpp",
+        "cinttypes": "cpp",
+        "valarray": "cpp",
+        "tensor": "cpp",
+        "tensorsymmetry": "cpp",
+        "__config": "cpp",
+        "alignedvector3": "cpp",
+        "__hash_table": "cpp",
+        "filesystem": "cpp",
+        "__string": "cpp",
+        "qtalignedmalloc": "cpp",
+        "fft": "cpp",
+        "nonlinearoptimization": "cpp",
+        "openglsupport": "cpp"
     }
 }
